# AgentTape

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
_t/: restore.yaml
docs/: adapters.md  api.md  cassette-modes.md  cassettes.md  cli.md  configuration-ref.md  configuration.md  cookbook.md  debugging.md  determinism.md  extending.md  format.md  index.md  installation.md  internals.md  mixed-replay.md  performance.md  pytest.md  quickstart.md  record-vs-replay.md  recording-apis.md  recording-databases.md  recording-tools.md  recording-vector-stores.md  redaction.md  replay-engine.md  replay-with-changes.md  testing-ai-apps.md  tools.md  why-agenttape.md  working-offline.md  your-first-recording.md
docs/javascripts/: shortcuts.js
docs/stylesheets/: extra.css
src/agenttape/: __init__.py  __main__.py  _box.py  assets.py  boundaries.py  callbacks.py  canonical.py  cassette.py  cli.py  config.py  diff.py  engine.py  errors.py  events.py  export.py  freeze.py  matchers.py  metrics.py  pytest_plugin.py  recorder.py  redaction.py  schema.py  timeline.py  validate.py  viewer.py  yaml_io.py
src/agenttape/adapters/: __init__.py  base.py  http.py  langgraph.py  openai.py
tests/: conftest.py  test_adapters.py  test_audit_fixes.py  test_cli.py  test_core_gaps.py  test_core_units.py  test_coverage_extra.py  test_diff.py  test_engine.py  test_fixes_regression.py  test_freeze.py  test_pytest_plugin.py  test_tooling.py  test_yaml_io.py
