[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttape"
version = "0.1.0"
description = "Deterministic record/replay of LLM and tool calls for AI agents, captured into human-readable cassettes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AgentTape Contributors" }]
keywords = [
    "ai",
    "agents",
    "llm",
    "testing",
    "record",
    "replay",
    "cassette",
    "determinism",
    "openai",
    "langgraph",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
# Zero required runtime dependencies for the core — stdlib only.
dependencies = []

[project.urls]
Homepage = "https://github.com/MITHRAN-BALACHANDER/AgentTape"
Documentation = "https://MITHRAN-BALACHANDER.github.io/AgentTape/"
Repository = "https://github.com/MITHRAN-BALACHANDER/AgentTape"
Changelog = "https://github.com/MITHRAN-BALACHANDER/AgentTape/blob/main/CHANGELOG.md"
Issues = "https://github.com/MITHRAN-BALACHANDER/AgentTape/issues"

[project.optional-dependencies]
# Robust YAML round-tripping when present; core falls back to a stdlib subset emitter/parser.
yaml = ["PyYAML>=6.0"]
openai = ["openai>=1.0"]
langgraph = ["langgraph>=0.1"]
langchain = ["langchain-core>=0.2"]
llamaindex = ["llama-index-core>=0.10"]
crewai = ["crewai>=0.30"]
autogen = ["pyautogen>=0.2"]
mcp = ["mcp>=1.0"]
http = ["httpx>=0.24", "requests>=2.28"]
numpy = ["numpy>=1.21"]
otel = ["opentelemetry-sdk>=1.20"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.5",
    "mypy>=1.8",
    "PyYAML>=6.0",
    "types-PyYAML>=6.0",
]
docs = [
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
agenttape = "agenttape.cli:main"

[project.entry-points.pytest11]
agenttape = "agenttape.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttape"]

[tool.hatch.build.targets.sdist]
include = ["src/agenttape", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function calls in argument defaults (used intentionally)
    "SIM105", # contextlib.suppress not always clearer
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "B017", "SIM117"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/agenttape"]
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# Optional adapter deps are typed when installed but absent in the strict core
# type-check environment. Skipping their imports makes them Any consistently, so the
# dynamic monkeypatching in adapters type-checks the same with or without them.
[[tool.mypy.overrides]]
module = [
    "yaml",
    "numpy",
    "openai",
    "openai.*",
    "langgraph",
    "langgraph.*",
    "httpx",
    "requests",
    "requests.*",
    "tomli",
    "tomllib",
]
ignore_missing_imports = true
follow_imports = "skip"

# pytest is typed when installed (dev extra); only stub it out if entirely absent.
[[tool.mypy.overrides]]
module = ["pytest", "_pytest.*"]
ignore_missing_imports = true

# Adapters patch third-party (Any) classes; tolerate ignores that may be redundant
# depending on whether the optional dependency is installed.
[[tool.mypy.overrides]]
module = ["agenttape.adapters.*"]
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "agenttape: bind a test to an AgentTape cassette (see pytest-agenttape plugin).",
]

[tool.coverage.run]
branch = true
source = ["agenttape"]
omit = ["*/adapters/_scaffold_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
]
